# RayTracerCMAKE

./: .gitignore  .gitmodules  .travis.yml  README.md  appveyor.yml
.github/workflows/: build.yml
RayTracer/: CMakeLists.txt  CMakeSettings.json
RayTracer/enc_temp_folder/1a0ec95fed428f2b5ffa75bda27d88c/: shape.h
RayTracer/enc_temp_folder/20ecd266f23fa4cd51a181a981912d/: Scene.cpp
RayTracer/enc_temp_folder/dfa4ce317ebd565641fa95be33901b70/: scene.h
RayTracer/include/: Sampler2D.h
RayTracer/include/camera/: camera.h
RayTracer/include/core/: renderer.h  rt.h  utility.h
RayTracer/include/gui/: gui.h
RayTracer/include/image/: image.h
RayTracer/include/integrators/: integrator.h  phong.h  whitted.h
RayTracer/include/interaction/: interaction.h
RayTracer/include/light/: light.h
RayTracer/include/material/: bsdf.h  lambert.h  material.h
RayTracer/include/misc/: loader.h  progressreporter.h
RayTracer/include/samplers/: sampler2D.h
RayTracer/include/scene/: scene.h
RayTracer/include/shape/: bvh.h  ray.h  shape.h
RayTracer/include/shape/quadric/: quadrics.h
RayTracer/include/texture/: texture.h  texturemapping.h
RayTracer/include/threads/: dispatcher.h
RayTracer/src/: Sampler2D.cpp  main.cpp
RayTracer/src/camera/: camera.cpp
RayTracer/src/core/: renderer.cpp
RayTracer/src/image/: image.cpp
RayTracer/src/integrators/: integrator.cpp  phong.cpp  whitted.cpp
RayTracer/src/light/: light.cpp
RayTracer/src/material/: bsdf.cpp  material.cpp
RayTracer/src/misc/: progressreporter.cpp
RayTracer/src/samplers/: sampler2D.cpp
RayTracer/src/scene/: Scene.cpp
RayTracer/src/shape/: bvh.cpp  shape.cpp
RayTracer/src/shape/quadric/: quadrics.cpp
RayTracer/src/texture/: texture.cpp
RayTracer/src/threads/: dispatcher.cpp
